syntax= "proto3";

option csharp_namespace="grpcFileTransportClient";

package file;

import "google/protobuf/empty.proto";

service FileService{
    rpc FileDownload(FileInfo) returns (stream BytesContent);
    rpc FileUpload(stream BytesContent) returns(google.protobuf.Empty);
}

//dosyanın genel bilgisi
message FileInfo{
    string fileName=1;
    //dosyanın uzantısı
    string fileExtension=2;
}


//gönderilecek parçaların genel bilgisi
message BytesContent{
    int64 fileSize=1;    
    bytes buffer=2;
    int32 readedByte=3;
    //gönderilecek datanın türü
    FileInfo info=4;
}